references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/IndividualUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:4c8a5e668c9d0f90d67414944552dbd6efa505ede26ee0b868cc7f7219b3f8ab
size 1427
